# VulkanMemoryAllocator-Hpp

./: CMakeLists.txt  README.md  VmaHppGenerator.cpp
.github/workflows/: build-custom-vulkan.yml  build.yml  generate.yml  release.yml
include/: vk_mem_alloc.cppm  vk_mem_alloc.hpp  vk_mem_alloc_handles.hpp
samples/: CompileCheck.cpp  common.hpp
tools/: GenerateFiles.cmake  UpdateSubmodule.cmake  VmaHppGenerator.cpp
